<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    android:orientation="vertical"
    android:divider="@color/purple_500"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/header_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="serif"
            android:text="@string/model_conf_text_info"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/upper_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/auto_save_interval"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="serif"
            android:text="@string/results_auto_save_interval_s"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/upper_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/auto_save_interval_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:digits="0123456789"
            android:gravity="center"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_recognition_mode_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/set_recognition_mode"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group_recognition_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="8"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_all_gestures_recognition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:buttonTint="@color/purple_500"
                android:fontFamily="sans-serif-medium"
                android:text="@string/all_gestures_recognition"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_custom_recognition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:buttonTint="@color/purple_500"
                android:fontFamily="sans-serif-medium"
                android:text="@string/custom_recognition" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="12">

        <TextView
            android:id="@+id/text_choose_model_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/choose_model"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
            <RadioGroup
                android:id="@+id/radio_group_models"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_base_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/base_model"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_vgg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/vgg_19" />


                <RadioButton
                    android:id="@+id/radio_inception"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/inception_v3" />

                <RadioButton
                    android:id="@+id/radio_optimized_model_decomposition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/model_with_decomposed_layers" />

                <RadioButton
                    android:id="@+id/radio_model_knowledge_distillation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/knowledge_distillation_model" />


                <RadioButton
                    android:id="@+id/radio_model_quantized_ptq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quantized_model_ptq" />
                <RadioButton
                    android:id="@+id/radio_model_quantized_qat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quantized_model_qat" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_accelerator_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/choose_accelerator"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group_accelerators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="8"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_cpu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:buttonTint="@color/purple_500"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cpu"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_gpu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:buttonTint="@color/purple_500"
                android:fontFamily="sans-serif-medium"
                android:text="@string/gpu" />

            <RadioButton
                android:id="@+id/radio_nnapi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nnapi" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_threads_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/set_number_of_threads"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/chooseBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/proceed"/>
    </LinearLayout>

</LinearLayout>